--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@ card: true
 
 	<li class="card__item">
 
-	  <div class="card__thumbnail">
+		<div class="card__media">
 
-		<img alt="" src="img/thumb-a11y.png">
+			<div class="card__thumbnail">
 
-	  </div>
+				<img alt="" src="img/thumb-a11y.png">
+	
+			</div>
+
+		</div>
   
 	  <div class="card__content">
 
-		<h2 class="card__title"><a class="card__trigger" href="/a11y/">Accessibility at Radancy</a></h2>
+		<h3 class="card__title"><a class="card__trigger" href="/a11y/">Accessibility at Radancy</a></h3>
   
 		<div class="card__summary">
 			
@@ -33,15 +37,19 @@ card: true
 
 	<li class="card__item">
 
-		<div class="card__thumbnail">
+		<div class="card__media">
 
-			<img alt="" src="img/thumb-component.png">
+			<div class="card__thumbnail">
+
+				<img alt="" src="img/thumb-component.png">
 	
+			</div>
+
 		</div>
   
 		<div class="card__content">
   
-		  <h2 class="card__title"><a class="card__trigger" href="/component-library/">Component Library</a></h2>
+		  <h3 class="card__title"><a class="card__trigger" href="/component-library/">Component Library</a></h3>
 	
 		  <div class="card__summary">
 			
@@ -55,15 +63,19 @@ card: true
 
 	  <li class="card__item">
 
-		<div class="card__thumbnail">
+		<div class="card__media">
 
-			<img alt="" src="img/thumb-magicbullet.png">
+			<div class="card__thumbnail">
+
+				<img alt="" src="img/thumb-magicbullet.png">
 	
+			</div>
+
 		</div>
   
 		<div class="card__content">
   
-		  <h2 class="card__title"><a class="card__trigger" href="/magicbullet/">MagicBullet</a></h2>
+		  <h3 class="card__title"><a class="card__trigger" href="/magicbullet/">MagicBullet</a></h3>
 	
 		  <div class="card__summary">
 			
@@ -77,15 +89,19 @@ card: true
 
 	  <li class="card__item">
 
-		<div class="card__thumbnail">
+		<div class="card__media">
 
-			<img alt="" src="img/thumb-blog.png">
+			<div class="card__thumbnail">
+
+				<img alt="" src="img/thumb-blog.png">
 	
+			</div>
+
 		</div>
   
 		<div class="card__content">
   
-		  <h2 class="card__title"><a class="card__trigger" href="/blog/">Radancy DevBlog</a></h2>
+		  <h3 class="card__title"><a class="card__trigger" href="/blog/">Radancy DevBlog</a></h3>
   
 		  <div class="card__summary">
 			
@@ -99,15 +115,19 @@ card: true
 
 	  <li class="card__item">
 
-		<div class="card__thumbnail">
+		<div class="card__media">
 
-			<img alt="" src="img/thumb-ui-standards.png">
+			<div class="card__thumbnail">
+
+				<img alt="" src="img/thumb-ui-standards.png">
 	
+			</div>
+
 		</div>
   
 		<div class="card__content">
   
-		  <h2 class="card__title"><a class="card__trigger" href="/uid/code-standards/">User Interface Standards and Guidelines</a></h2>
+		  <h3 class="card__title"><a class="card__trigger" href="/uid/code-standards/">User Interface Standards and Guidelines</a></h3>
 	
 		  <div class="card__summary">
 			
