--- a/_posts/2021-08-05-accessible-html5-video/code-accessible-html5-video.html
+++ b/_posts/2021-08-05-accessible-html5-video/code-accessible-html5-video.html
@@ -1,4 +1,4 @@
-<video aria-label="The Empire Strikes Back: Trailer A" controls poster="{{ site.url }}{{ site.baseurl }}/media/2021-08-05-accessible-html5-video/example.png" preload="metadata" style="border-radius: 40px;">
+<video aria-label="The Empire Strikes Back: Trailer A" controls poster="{{ site.url }}{{ site.baseurl }}/media/2021-08-05-accessible-html5-video/example.png" preload="metadata">
     <source src="{{ site.url }}{{ site.baseurl }}/media/2021-08-05-accessible-html5-video/example.mp4" type="video/mp4">
     <track default label="English" kind="captions" src="{{ site.url }}{{ site.baseurl }}/media/2021-08-05-accessible-html5-video/example.vtt" srclang="en">
 </video>
