--- a/_posts/2021-08-05-accessible-html5-video/2021-08-05-accessible-html5-video.html
+++ b/_posts/2021-08-05-accessible-html5-video/2021-08-05-accessible-html5-video.html
@@ -4,17 +4,43 @@ date: "2021-08-05 00:48:34"
 disclosure: true
 email: michael.spellacy@radancy.com
 img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
+localcss: /media/2021-08-05-accessible-html5-video/init.css
 layout: micropubpost
 pronouns: He/Him
 role: Director, Accessibility
 tags: Accessibility Article Development
 title: "Accessible HTML5 Video with Captions and Transcript"
+update: 2024-08-22 14:22:36
 ---
 
-<p>Here is an example of how to set up HTML5 video that can be enjoyed by everybody! Want to be truly inclusive? Make accessibility a priority by having your captions present by default. In addition to captions, transcripts are also strongly suggested. The transcript should live near the video for easy access.</p>
+<p>Here is an example of how to set up HTML5 video that can be enjoyed by everybody! Want to be truly inclusive? Make accessibility a priority by having captioning present <em>by default</em>. In addition to captioning, transcripts are also strongly recommended. The transcript should live near the video for easy access. If you require captions and transcripts, head on over to <a href="/a11y/caption/">our intranet</a> for more information.</p>
+
+<section aria-labelledby="hdr-a11y-transcripts" class="a11y-info" id="are-transcripts-necessary">
+
+	<h2 id="hdr-a11y-transcripts">Are Transcripts Necessary? <a class="anchor" href="#are-transcripts-necessary"><span class="icon icon-anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"></path></svg></span> <span class="sr-only">Anchor (Are Transcripts Necessary?)</span></a></h2>
+
+    <p>Yes! Providing an alternative way to share information through a video is a great idea! Here are some reasons why you should also include transcripts:<p>
+
+    <ol>
+        <li>Captions may not be accessible to certain assistive technologies, like refreshable Braille displays or screen readers.</li>
+        <li>Captions may move too quickly or be distracting for some users.</li>
+        <li>Transcripts allow people to search and scan content more easily.</li>
+        <li>Transcripts can include additional details, semantic markup and hyperlinks, that wouldn't be possible or appropriate in captions.</li>
+        <li>Besides enhancing accessibility, search engines may benefit from the extra information, helping them better understand and index your content.</li>
+    </ol>
+
+    <p>Source: <a href="https://meryl.net/captioning-videos-faq/">Captioning Videos FAQ</a></p>
+
+</section>
+
+<h2>Example Layout</h2>
 
 {% include_relative code-accessible-html5-video.html %}
 
-<h2>Code</h2>
+<h2>HTML</h2>
 
 {% highlight html%}{% include_relative code-accessible-html5-video.html %}{% endhighlight %}
+
+<h2>CSS</h2>
+
+{% highlight css%}{% include_relative init.scss %}{% endhighlight %}
