--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -10,6 +10,10 @@ title: "Useful Bookmarklets"
 
 <p>Used to retrieve and output a spreadhseet of <strong>necessary</strong> pages on a careers site that will be used in accessibility testing. The sheet will also include links to the W3C Validator and WAVE. Works on both QA and Production domains.</p>
 
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/image-inventory.js'); document.body.appendChild(jsCode);}());">Image Inventory (Career Site)</a>
+
+<p>Used to retrieve and output a spreadhseet of of all page related images and alternative text values. This script will also indicate if the alt text value as been ommited.</p>
+
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/reflow-1280x1024.js'); document.body.appendChild(jsCode);}());">Reflow (1280 x 1024)</a>
 
 <p>Used to to open the page you are viewing in a 1280 x 1024 window. Zooming into the page by 400% will then mimic the conditions needed to test <a href="https://www.w3.org/WAI/WCAG22/Understanding/reflow">reflow</a>.</p>
