--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -10,9 +10,9 @@ title: "Useful Bookmarklets"
 
 <p>Used to retrieve and output a spreadhseet of <strong>necessary</strong> pages on a careers site that will be used in accessibility testing. The sheet will also include links to the W3C Validator and WAVE. Works on both QA and Production domains.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/image-inventory.js'); document.body.appendChild(jsCode);}());">Image Inventory (Career Site)</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/images.js'); document.body.appendChild(jsCode);}());">Check Images (Career Site)</a>
 
-<p>Used to retrieve and output a spreadhseet of of all page related images and alternative text values. This script will also indicate if the alt text value as been ommited.</p>
+<p>Used to retrieve and output a spreadhseet of of all page related images and alternative text values. This script will also indicate if the <code>alt</code> attribute has been ommited. Works on both QA and Production domains.</p>
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/reflow-1280x1024.js'); document.body.appendChild(jsCode);}());">Reflow (1280 x 1024)</a>
 
@@ -20,7 +20,7 @@ title: "Useful Bookmarklets"
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/text-spacing.js'); document.body.appendChild(jsCode);}());">Text Spacing</a>
 
-<p>Used to to mimic the minimum adjustments users may make in order to test against <a href="https://www.w3.org/WAI/WCAG22/Understanding/reflow">test spacing</a>.</p>
+<p>Used to to mimic the minimum adjustments users may make in order to test against <a href="https://www.w3.org/WAI/WCAG22/Understanding/reflow">text spacing</a>.</p>
 
 <h2>General Utilities</h2>
 
