--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -10,7 +10,7 @@ title: "Useful Bookmarklets"
 
 <p>Used to retrieve and output a spreadhseet of <strong>necessary</strong> pages on a careers site that will be used in accessibility testing. The sheet will also include links to the W3C Validator and WAVE. Works on both QA and Production domains.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/images.js'); document.body.appendChild(jsCode);}());">Check Images (Career Site)</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/review-alt.js'); document.body.appendChild(jsCode);}());">Review Alt Text (Career Site)</a>
 
 <p>Used to retrieve and output a spreadhseet of of all page related images and alternative text values. This script will also indicate if the <code>alt</code> attribute has been ommited. Works on both QA and Production domains.</p>
 
