Fixed broken Jon image

--- a/_posts/2024-05-01-transparent-video-for-the-web.html
+++ b/_posts/2024-05-01-transparent-video-for-the-web.html
@@ -2,7 +2,7 @@
 author: "Jon Schock"
 date: "2024-05-01 09:20:00"
 email: jon.schock@radancy.com
-img: https://media.licdn.com/dms/image/D5603AQHWmQsSmfXstQ/profile-displayphoto-shrink_200_200/0/1689882291537?e=1728518400&v=beta&t=WtKQRpKGqyBhCzu6ZO2Vv_JcJCzf_XU27cz_eVg3ArI
+img: /img/author-jon-schock.jpg
 layout: micropubpost
 pronouns: He/Him
 role: Associate Creative Director
