--- a/_posts/2024-05-01-transparent-video-for-the-web.html
+++ b/_posts/2024-05-01-transparent-video-for-the-web.html
@@ -10,13 +10,13 @@ tags: Article Creative Tutorials
 title: "Transparent Video for the Web"
 ---
 
-<p><p>While struggling to find a solution to handle alpha-transparent, live-action animations for a recent project, various options were considered. Animated GIFS? They feel outdated and lack quality. How about CSS animations? Too custom and not quite feasible given the live-action animation required for the project. After Effects animations were also pondered, but these are often best suited for vector-based needs. What about video? Surely alpha-transparent video is achievable by now. I mean, it's 2024, right? Hmm, the idea was worth exploring, but it took some doing to get there. To accomplish this remarkable feat, a few steps were necessary. </p>
+<p>While struggling to find a solution to handle alpha-transparent, live-action animations for a recent project, various options were considered. Animated GIFS? They feel outdated and lack quality. How about CSS animations? Too custom and not quite feasible given the live-action animation required for the project. After Effects animations were also pondered, but these are often best suited for vector-based needs. What about video? Surely alpha-transparent video is achievable by now. I mean, it's 2024, right? Hmm, the idea was worth exploring, but it took some doing to get there. To accomplish this remarkable feat, a few steps were necessary.</p>
 
 <figure>
 
-    <iframe allowfullscreen="true" allowpaymentrequest="true" allowtransparency="true" frameborder="0" height="300" width="100%" scrolling="no" src="https://radancy.dev/component-library/animation-toggle/transparent/" style="width: 100%; overflow:hidden; display:block;" title="Code Example" loading="lazy"></iframe>
+    <iframe class="code-demo" loading="lazy" scrolling="no" src="http://localhost:4004/animation-toggle/transparent/" title="Code Example"></iframe>
 
-    <figcaption>A working, more advanced example of alpha-transparent video, which comes into view on page load or upon scrolling to it.</figcaption>
+    <figcaption>A working, more advanced example of alpha-transparent video, which comes into view on page load or upon scrolling to it. You can review the code in our <a href="https://radancy.dev/component-library/animation-toggle/#transparent">component library</a>.</figcaption>
 
 </figure>
 
