--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ card: true
   
 	  <div class="card__content">
 
-		<h3 class="card__title"><a class="card__trigger" href="/a11y/">Accessibility at Radancy</a></h3>
+		<h3 class="card__title"><a class="card__trigger card__click" href="/a11y/">Accessibility at Radancy</a></h3>
   
 		<div class="card__summary">
 			
@@ -49,7 +49,7 @@ card: true
   
 		<div class="card__content">
   
-		  <h3 class="card__title"><a class="card__trigger" href="/component-library/">Component Library</a></h3>
+		  <h3 class="card__title"><a class="card__trigger card__click" href="/component-library/">Component Library</a></h3>
 	
 		  <div class="card__summary">
 			
@@ -75,7 +75,7 @@ card: true
   
 		<div class="card__content">
   
-		  <h3 class="card__title"><a class="card__trigger" href="/magicbullet/">MagicBullet</a></h3>
+		  <h3 class="card__title"><a class="card__trigger card__click" href="/magicbullet/">MagicBullet</a></h3>
 	
 		  <div class="card__summary">
 			
@@ -101,7 +101,7 @@ card: true
   
 		<div class="card__content">
   
-		  <h3 class="card__title"><a class="card__trigger" href="/blog/">Radancy DevBlog</a></h3>
+		  <h3 class="card__title"><a class="card__trigger card__click" href="/blog/">Radancy DevBlog</a></h3>
   
 		  <div class="card__summary">
 			
@@ -127,7 +127,7 @@ card: true
   
 		<div class="card__content">
   
-		  <h3 class="card__title"><a class="card__trigger" href="/uid/code-standards/">User Interface Standards and Guidelines</a></h3>
+		  <h3 class="card__title"><a class="card__trigger card__click" href="/uid/code-standards/">User Interface Standards and Guidelines</a></h3>
 	
 		  <div class="card__summary">
 			
