--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@ card: true
 
 <h2>Explore</h2>
 
-<ul class="card">
+<ul class="card" role="list">
 
 	<li class="card__item">
 
 		<div class="card__media">
 
-			<div class="card__thumbnail">
-
-				<img alt="" src="img/thumb-a11y.png">
+			<img alt="" src="img/thumb-a11y.png">
 	
-			</div>
-
 		</div>
-  
-	  <div class="card__content">
 
 		<h3 class="card__title"><a class="card__trigger card__click" href="/a11y/">Accessibility at Radancy</a></h3>
   
@@ -31,32 +25,22 @@ card: true
 
 		</div>
   
-	  </div>
-  
 	</li>
 
 	<li class="card__item">
 
 		<div class="card__media">
 
-			<div class="card__thumbnail">
-
-				<img alt="" src="img/thumb-component.png">
-	
-			</div>
+			<img alt="" src="img/thumb-component.png">
 
 		</div>
   
-		<div class="card__content">
-  
-		  <h3 class="card__title"><a class="card__trigger card__click" href="/component-library/">Component Library</a></h3>
+		<h3 class="card__title"><a class="card__trigger card__click" href="/component-library/">Component Library</a></h3>
 	
-		  <div class="card__summary">
+		<div class="card__summary">
 			
 			<p>Access a library of modular components that seamlessly combine to empower the creation of dynamic website interfaces.</p>
 
-		  </div>
-	
 		</div>
 	
 	  </li>
@@ -65,24 +49,16 @@ card: true
 
 		<div class="card__media">
 
-			<div class="card__thumbnail">
-
-				<img alt="" src="img/thumb-magicbullet.png">
-	
-			</div>
+			<img alt="" src="img/thumb-magicbullet.png">
 
 		</div>
   
-		<div class="card__content">
-  
-		  <h3 class="card__title"><a class="card__trigger card__click" href="/magicbullet/">MagicBullet</a></h3>
+		<h3 class="card__title"><a class="card__trigger card__click" href="/magicbullet/">MagicBullet</a></h3>
 	
-		  <div class="card__summary">
+		<div class="card__summary">
 			
 			<p>Utilize a script importer designed to seamlessly load beneficial fixes, enhanced functionality, and additional features.</p>
 
-		  </div>
-	
 		</div>
 	
 	  </li>
@@ -91,50 +67,34 @@ card: true
 
 		<div class="card__media">
 
-			<div class="card__thumbnail">
-
-				<img alt="" src="img/thumb-blog.png">
-	
-			</div>
+			<img alt="" src="img/thumb-blog.png">
 
 		</div>
   
-		<div class="card__content">
+		<h3 class="card__title"><a class="card__trigger card__click" href="/blog/">Radancy DevBlog</a></h3>
   
-		  <h3 class="card__title"><a class="card__trigger card__click" href="/blog/">Radancy DevBlog</a></h3>
-  
-		  <div class="card__summary">
+		<div class="card__summary">
 			
 			<p>Explore Radancy's DevBlog, brimming with insightful posts and expert guidance covering a diverse array of topics from our Subject Matter Experts.</p>
 
-		  </div>
-	
 		</div>
-	
+
 	  </li>
 
 	  <li class="card__item">
 
 		<div class="card__media">
 
-			<div class="card__thumbnail">
-
-				<img alt="" src="img/thumb-ui-standards.png">
-	
-			</div>
+			<img alt="" src="img/thumb-ui-standards.png">
 
 		</div>
   
-		<div class="card__content">
-  
-		  <h3 class="card__title"><a class="card__trigger card__click" href="/uid/code-standards/">User Interface Standards and Guidelines</a></h3>
+		<h3 class="card__title"><a class="card__trigger card__click" href="/uid/code-standards/">User Interface Standards and Guidelines</a></h3>
 	
-		  <div class="card__summary">
+		<div class="card__summary">
 			
 			<p>Learn more about Radancy's established practices for HTML, CSS, and JavaScript development, alongside industry-wide best practices embraced by our designers and developers.</p>
 
-		  </div>
-	
 		</div>
 	
 	  </li>
