--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@ card: true
 
 		<div class="card__media">
 
+			<img alt="" src="img/thumb-pulse.png">
+	
+		</div>
+
+		<h3 class="card__title"><a class="card__trigger card__click" href="/a11y/pulse/">A11y Pulse</a></h3>
+  
+		<div class="card__summary">
+			
+			<p>A companion tool for testing web pages that helps identify common accessibility issues and provides useful guidance for learning and remediation.</p>
+
+		</div>
+  
+	</li>
+
+	<li class="card__item">
+
+		<div class="card__media">
+
 			<img alt="" src="img/thumb-component.png">
 
 		</div>
