--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ card: true
 	
 		</div>
 
-		<h3 class="card__title"><a class="card__trigger card__click" href="/a11y/pulse/">A11y Pulse</a></h3>
+		<h3 class="card__title"><a class="card__trigger card__click" href="/a11y/pulse/">Accessibility Pulse</a></h3>
   
 		<div class="card__summary">
 			
